--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 
 <body id="body" class="">
 	<div class="chart-container">
+		<div id="color-key">
+			<div class="color-key">
+				<div class="color-container">
+					<div
+						class="color-box color-1"
+						style="background-color: #e74c3c"
+					></div>
+					<span class="color-label">Palestinians</span>
+				</div>
+				<div class="color-container">
+					<div
+						class="color-box color-2"
+						style="background-color: #3cab4b"
+					></div>
+					<span class="color-label">Palestinians Children</span>
+				</div>
+				<div class="color-container">
+					<div
+						class="color-box color-3"
+						style="background-color: #3498db"
+					></div>
+					<span class="color-label">israeliens </span>
+				</div>
+
+				<!-- Add more color boxes and labels as needed -->
+			</div>
+		</div>
 		<svg width="960" height="500"></svg>
 		<a
 			id="link_button"
