adding feedback form

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 		</label>
 		<label class="toggle-label">Dark Mode</label>
 	</div>
+	<a
+		class="feedback"
+		href="https://docs.google.com/forms/d/e/1FAIpQLScZtsbmWzRoC9_SpcKVzeSdHNuxwLBPUfi-mNmFZKpZDX5N1Q/viewform?usp=sf_link"
+		target="_blank"
+	>
+		Feeback Form
+	</a>
 	<script src="./libraries/d3.min.js"></script>
 	<script src="./script.js"></script>
 </body>
